<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlayinWithInteractiveNotifications</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="notification_navigation">Notification Navigation</string>
    <string name="stop_service">Stop service</string>
    <string name="avengers">Avengers</string>
    <string name="start_foreground_service">Start Foreground Service</string>
    <string name="custom_notification">Custom Notification</string>
    <string name="start_service">Start Service</string>

</resources>
